Introduce `CachedIndependenceQueries` to optimize independence test evaluations across `VertexCheckEditor` and `VertexRepairPanel`, refactor caching logic, and replace legacy cache structures with the new shared utility.